c/examples/writing-a-c-compiler-tests/tests/chapter_15/invalid_parse/malformed_type_name_2.c
int main(void) {
    int *ptr;
    // this is malformed in two ways: the declarator itself is invalid,
    // and it's missing a type specifier
    int *array_pointer[3] = ([3](*)) ptr;
    return 0;
}